...
        step("Проверяем что экран открылся") {
            title.isDisplayed()
        }
    }

    private class CatCard(matcher: Matcher<View>) : KRecyclerItem<CatCard>(matcher) {
        val catName = KTextView(matcher) { withId(R.id.cat_name) }
    }

    companion object {
        const val SCREEN_NAME = "Экран поиска"

        inline operator fun invoke(testContext: TestContext<*>, crossinline block: SearchScreen.() -> Unit) {
...
