...
private fun RatingTab(
    vote: Vote,
    onTabClick: (Vote) -> Unit
) {
    val testTag = when (vote) {
        Vote.LIKES -> "likesTab"
        Vote.DISLIKES -> "dislikesTab"
    }

    Box(
        contentAlignment = Alignment.Center,
        modifier = Modifier
            .fillMaxWidth()
...
