...
 */
class CatDetailsScreen(testContext: TestContext<*>) : BaseScreen(testContext) {
    override val layoutId: Int = R.layout.details_fragment_redesign
    override val viewClass: Class<*> = DetailsFragment::class.java

    private val name = KTextView { withId(R.id.cat_name) }
    private val likeButton = KButton { withId(R.id.ib_like) }
    private val description = KTextView { withId(R.id.cat_description) }
    private val editButton = KButton { withId(R.id.btn_edit) }
    private val descField = KEditText { withId(R.id.til_desc) }
    private val confirmBtn = KButton { withId(R.id.confirm_button) }

    fun checkCatName(catName: String) {
...
